--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-i love u
+<h5>"I keep myself busy with the things I do, but every time I pause, I still think of you"</h5>
+<p>Poets use countless words to describe their pain, but I only need three: I miss you.</p>
+<img src="https://hips.hearstapps.com/hmg-prod/images/miss-you-quotes6-1644874110.jpg?crop=1xw:1xh;center,top&resize=980:*" />
